--- a/css/font.css
+++ b/css/font.css
@@ -1,3 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
-/*font-family: 'DM Sans', sans-serif;*/
+:root {
+	font-size: 62.5%;
+	font-family: "DM Sans", sans-serif;
+
+	/*--- TEXT SIZE ---*/
+	--text-size-1: 3.4rem;
+	--text-size-2: 2rem;
+	--text-size-3: 1.8rem;
+	--text-size-4: 1.6rem;
+	--text-size-5: 1.4rem;
+}
