--- a/css/color.css
+++ b/css/color.css
@@ -1,5 +1,7 @@
 :root {
 	--primary-color: hsl(170, 100%, 26%);
-    --headline: hsl(210, 11%, 15%);
-    --paragraph: hsl(210, 9%, 31%);
+	--headline: hsl(210, 11%, 15%);
+	--paragraph: hsl(210, 9%, 31%);
+	--brand-beige: hsl(39, 100%, 97%);
+	--brand-light: hsl(148, 23%, 89%);
 }
