--- a/css/font.css
+++ b/css/font.css
@@ -5,9 +5,10 @@
 	font-family: "DM Sans", sans-serif;
 
 	/*--- TEXT SIZE ---*/
-	--text-size-1: 3.4rem;
-	--text-size-2: 2rem;
-	--text-size-3: 1.8rem;
-	--text-size-4: 1.6rem;
-	--text-size-5: 1.4rem;
+	--font-size-1: 3.4rem;
+	--font-size-2: 2rem;
+	--font-size-3: 1.8rem;
+	--font-size-4: 1.6rem;
+	--font-size-5: 1.4rem;
+	--font-size-6: 4.8rem;
 }
