--- a/css/main.css
+++ b/css/main.css
@@ -4,32 +4,65 @@
 
 body {
 	text-align: center;
-	font-size: var(--text-size-4);
+	font-size: var(--font-size-4);
 }
 
-header {
+:root {
+	--nav-height: 7.2rem;
+}
+
+.wrapper {
 	width: 37.5rem;
-
-	margin: 4.1rem auto 0 auto;
-	padding: 0 2rem;
+	margin-inline: auto;
+	padding-inline: 2.4rem;
 }
 
-h1 {
-	font-size: var(--text-size-1);
+/*--- HEADER ---*/
+header {
+	margin-top: calc(4.1rem + var(--nav-height));
+}
+
+header::before {
+	content: "";
+
+	width: 100vw;
+	height: calc(108rem + var(--nav-height));
+
+	background-color: var(--brand-light);
+
+	display: block;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	z-index: -1;
+}
+
+header h1 {
+	font-size: var(--font-size-1);
 	color: var(--headline);
 	line-height: 130%;
 
 	margin-bottom: 2.4rem;
 }
 
-h4 {
-	font-size: var(--text-size-5);
+header h4 {
+	font-size: var(--font-size-5);
 	color: var(--primary-color);
 	margin-bottom: 1.6rem;
 }
 
-p {
-	font-size: var(--text-size-3);
+header img {
+	width: 26.4rem;
+	display: block;
+	margin: 0 auto;
+	max-width: 100%;
+	object-position: 0 2rem;
+}
+
+header p {
+	font-size: var(--font-size-3);
 	line-height: 150%;
 	font-weight: 400;
 	color: var(--paragraph);
@@ -37,7 +70,7 @@ p {
 	margin-bottom: 3.2rem;
 }
 
-button {
+header button {
 	background-color: var(--primary-color);
 
 	border: none;
@@ -50,7 +83,7 @@ button {
 
 	text-transform: uppercase;
 	color: #ffffff;
-	font-size: var(--text-size-5);
+	font-size: var(--font-size-5);
 	font-weight: 700;
 
 	display: flex;
@@ -61,6 +94,85 @@ button {
 	cursor: pointer;
 }
 
-button i {
-	font-size: var(--text-size-2);
+header button i {
+	font-size: var(--font-size-2);
+}
+
+.stats {
+	width: 32.7rem;
+
+	padding: 4rem 0;
+	margin: 0 auto;
+
+	background-color: var(--brand-beige);
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 6rem;
+
+	border: 1px solid var(--brand-light);
+	border-radius: 0.6rem;
+}
+
+.stat h3 {
+	font-size: var(--font-size-6);
+	color: var(--headline);
+	line-height: 130%;
+
+	margin-bottom: 0.4rem;
+}
+
+.stat p {
+	margin: 0;
+
+	color: var(--primary-color);
+	font-size: var(--font-size-4);
+	line-height: 150%;
+}
+
+/*--- NAV ---*/
+nav {
+	display: flex;
+
+	height: var(--nav-height);
+
+	position: fixed;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+}
+nav .logo {
+	font-size: var(--font-size-1);
+	font-weight: 400;
+	text-decoration: none;
+	color: var(--headline);
+}
+
+nav .logo-efeito {
+	color: var(--primary-color);
+	font-weight: 500;
+}
+
+nav .menu {
+	font-size: var(--font-size-2);
+	color: var(--primary-color);
+	cursor: pointer;
+}
+
+nav .wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+nav.scroll {
+	background-color: var(--primary-color);
+	width: 100vw;
+}
+
+nav.scroll a,
+nav.scroll i,
+nav.scroll span {
+	color: #ffffff;
 }
