--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,6 @@
-@import "reset.css";
+@import "config.css";
 @import "color.css";
 @import "font.css";
-
-body {
-	text-align: center;
-	font-size: var(--font-size-4);
-}
-
-:root {
-	--nav-height: 7.2rem;
-}
-
-.wrapper {
-	width: 37.5rem;
-	margin-inline: auto;
-	padding-inline: 2.4rem;
-}
 
 /*--- HEADER ---*/
 header {
@@ -25,7 +10,7 @@ header {
 header::before {
 	content: "";
 
-	width: 100vw;
+	width: 100%;
 	height: calc(108rem + var(--nav-height));
 
 	background-color: var(--brand-light);
@@ -142,23 +127,6 @@ nav {
 	left: 50%;
 	transform: translateX(-50%);
 }
-nav .logo {
-	font-size: var(--font-size-1);
-	font-weight: 400;
-	text-decoration: none;
-	color: var(--headline);
-}
-
-nav .logo-efeito {
-	color: var(--primary-color);
-	font-weight: 500;
-}
-
-nav .menu {
-	font-size: var(--font-size-2);
-	color: var(--primary-color);
-	cursor: pointer;
-}
 
 nav .wrapper {
 	display: flex;
@@ -171,8 +139,85 @@ nav.scroll {
 	width: 100vw;
 }
 
-nav.scroll a,
-nav.scroll i,
-nav.scroll span {
+nav.scroll svg:nth-child(1) path {
+	fill: #ffffff;
+}
+
+nav.scroll svg:nth-child(2) path {
+	stroke: #ffffff;
+}
+
+/*---MENU EXPANDED---*/
+.menu,
+.close-menu,
+body.menu-expanded .open-menu {
+	opacity: 0;
+	visibility: hidden;
+}
+
+body.menu-expanded .menu,
+body.menu-expanded .close-menu {
+	opacity: 1;
+	visibility: visible;
+}
+
+body.menu-expanded {
+	overflow: hidden;
+}
+
+body.menu-expanded .menu {
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: var(--primary-color);
+
+	width: 100vw;
+	height: 100vh;
+}
+
+body.menu-expanded nav {
+	position: relative;
+}
+
+.menu ul:nth-child(1) {
+	display: flex;
+	flex-direction: column;
+	gap: 4.8rem;
+
+	margin-top: 6rem;
+
+	font-weight: 700;
+	font-size: var(--font-size-7);
+	line-height: 3.1rem;
+}
+
+.menu ul li a {
+	color: #ffffff;
+}
+
+.menu .button {
+	background-color: #ffffff;
+	border-radius: 4rem;
+	font-weight: 700;
+	font-size: var(--font-size-3);
+	line-height: 2.3rem;
+	text-transform: uppercase;
+	color: var(--primary-color);
+
+	display: inline-block;
+	padding: 1.6rem 3.2rem;
+	margin-top: 4.8rem;
+	margin-bottom: 8rem;
+}
+
+.social-links {
+	display: flex;
+	gap: 3.2rem;
+	align-items: center;
+	justify-content: center;
+}
+
+.social-links i {
+	font-size: var(--font-size-2);
 	color: #ffffff;
 }
