--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ nav.scroll svg:nth-child(1) path {
 	fill: #ffffff;
 }
 
-nav.scroll svg:nth-child(2) path {
+nav.scroll button path {
 	stroke: #ffffff;
 }
 
